# vrsix

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: checks.yaml  release.yaml
python/: requirements.txt  va_spec.py
rust/: Cargo.toml
rust/src/: cli.rs  fetch.rs  lib.rs  load.rs  main.rs  parquet.rs  parse.rs  sqlite.rs
src/: main.rs  parquet.rs
src/gks_anvil/vrsix/: cli.py  fetch.py  load.py
src/ivrs/: cli.py  load.py  output.py
src/vrs_index_vcf/: cli.py  load.py  output.py
src/vrsix/: cli.py  fetch.py  load.py
tests/: conftest.py  test_fetch.py  test_load.py
tests/fixtures/: index.db  input_old_format.vcf  input_positions_ints.vcf  invalid_vcf.vcf  not_a_db.db  wrong_schema.db
