[package]
name = "gks-gregor-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
noodles-vcf = { version = "0.64.0", features = ["async"] }
polars = { version = "0.43.0", features = ["lazy", "parquet"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
